Resolves: MTV-4628 | Fix plan table cell spacing

--- a/src/components/ProviderIconLink.scss
+++ b/src/components/ProviderIconLink.scss
@@ -7,3 +7,9 @@
   justify-content: center;
   flex-shrink: 0;
 }
+
+.forklift-provider-icon-link__name {
+  max-width: 30ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
